// Execute >extension.generateDbmlGraph to generate diagram preview

Table phrase {
  id integer [primary key]
  phrase text
  created_at timestamp 
}

Table widget {
  id integer [primary key]
  phrase_id integer
  style_id integer
  created_at timestamp
}

Table widget_style {
  id integer [primary key]
  font_style text
  font_size integer
  font_color integer
  widget_background_color integer
  widget_frame text
  created_at timestamp
}

Ref: widget.phrase_id < phrase.id // TODO check if correct
Ref: widget.style_id < widget_style.id // TODO check if correct
